# AgriSense-cnn-server

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  ai_service.py  config.py  main.py  model_utils.py  pyproject.toml  test_torch.py
.github/workflows/: deploy.yml
models/: best_model.pth
notebooks/: Crop_Disease_model_.ipynb
